--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Euphoric is a  game that made with JavaScript and based on ZIM framework.The goal of the game is to provide an immersive gaming experience for users while teaching them the importance of protecting the environment."/>
+    <meta name="description" content="Euphoric is a  game that made with JavaScript and based on ZIM framework."/>
     <meta name="keywords" content="UX, design,UX&nbsp;design,UXDesign,UXD,hci,productdesign,prodcut&nbsp;design,uxresearch,ux&nbsp;research,frint-end,front-end development, resume, portfolio "/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Steve Yichen Li">
@@ -12,7 +12,7 @@
 
 <!-- Google / Search Engine Tags -->
 <meta itemprop="name" content="Steve Li - Front-end Development | Euphoric ">
-<meta itemprop="description" content="Euphoric is an education game that made with JavaScript and based on ZIM framework.The goal of the game is to provide an immersive gaming experience for users while teaching them the importance of protecting the environment.">
+<meta itemprop="description" content="Euphoric is an education game that made with JavaScript and based on ZIM framework.">
 <meta itemprop="image" content="https://steveyichenli.netlify.app/assets/images/euphoric@2x.png">
  
 <!-- Facebook Meta Tags -->
@@ -24,9 +24,9 @@
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Steve Li - Front-end Development | Euhporic">
-<meta name="twitter:description" content="Euhporic is an  game that made with JavaScript and based on ZIM framework.The goal of the game is to provide an immersive gaming experience for users while teaching them the importance of protecting the environment.">
+<meta name="twitter:description" content="Euhporic is an  game that made with JavaScript and based on ZIM framework.">
 <meta name="twitter:image" content="https://steveyichenli.netlify.app/assets/images/euphoric@2x.png">
-    <title>Steve Li - Front-end Development | Euphoric</title>
+    <title>Steve Yichen Li - Front-end Development | Euphoric</title>
     <script src="https://zimjs.org/cdn/1.2.4/createjs.js"></script>
     <script src="https://zimjs.org/cdn/10.8.0/zim.js"></script>
     <script src="https://zimjs.org/cdn/Box2dWeb-2.1.a.3.min.js"></script>
